add test and code coverage - manage dependencies